java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unnamedClass/StaticInitializer.java
<error descr="Initializers are not allowed in unnamed classes" textAttributesKey="ERRORS_ATTRIBUTES">static {

}</error>

void main() {

}